# composible-generator

./: Cargo.toml  doctor.swagger.json  indicatorvalueglobal.swagger.json  swagger.json
output/: biz.go  data.go  service.go
output/composables/: api.ts  biz.go  data.go  service.go
src/: main.rs
src/generator/: biz.rs  kratos_biz.rs  mod.rs
src/models/: common.rs  mod.rs  swagger.rs
src/utils/: convert.rs  filter.rs  mod.rs  path.rs
templates/: biz_template.tera  composable_template.tera  kratos_biz_template.tera  kratos_data_template.tera  kratos_service_template.tera
