[package]
name = "composable_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
clap = { version = "4.5.19", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
convert_case = "0.6.0"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
